<resources>
    <string name="app_name">DuBaoThoiTiet</string>
    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">close drawer</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="humidity">Humidity:</string>
    <string name="Sunrise">Sunrise:</string>
    <string name="Sunset">Sunset:</string>
    <string name="lastUpdated">Last Updated:</string>
    <string name="failed">Failed</string>
</resources>
